# Mesh-simplification

./: CMakeLists.txt  Makefile  README.md  calcConstraints.cpp  constraints.cpp  main.cpp  meshwrap.cpp  meshwrap.h
